--- a/01_dockerfiles/ex00/Dockerfile
+++ b/01_dockerfiles/ex00/Dockerfile
@@ -5,6 +5,9 @@ LABEL       MAINTAINER="mbelalou@student.42.fr"
 RUN         apt-get update -y && \
             apt-get install -y vim
 
-CMD         vim test
+CMD         vim test.txt
 
 WORKDIR     /home
+
+#docker image build -t vim .
+#docker run --rm -it vim
