--- a/01_dockerfiles/ex01/Dockerfile
+++ b/01_dockerfiles/ex01/Dockerfile
@@ -13,3 +13,6 @@ CMD			[ "./teamspeak3-server_linux_amd64/ts3server_minimal_runscript.sh" ]
 
 EXPOSE		9987/udp 30033 10011
 ENV         TS3SERVER_LICENSE=accept
+
+#docker image build -t teamspeak .
+#docker run --rm -p 9987:9987/udp -p 10011:10011 -p 30033:30033 -it teamspeak
