--- a/01_dockerfiles/ex00/Dockerfile
+++ b/01_dockerfiles/ex00/Dockerfile
@@ -9,5 +9,5 @@ CMD         vim test.txt
 
 WORKDIR     /home
 
-#docker image build -t vim .
-#docker run --rm -it vim
+#docker image build -t ft-vim .
+#docker run --rm -it ft-vim
