--- a/01_dockerfiles/ex03/Dockerfile
+++ b/01_dockerfiles/ex03/Dockerfile
@@ -1,16 +1,25 @@
 FROM ubuntu:16.04
 
-LABEL		MAINTAINER="mbelalou@student.42.fr"
 
 RUN apt-get update && \
-    apt-get upgrade -y && \
-    apt-get install -y ca-certificates openssh-server wget postfix
+    apt-get install -y curl openssh-server ca-certificates && \
+    apt-get install -y postfix
 
-RUN wget https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.deb.sh && chmod 777 script.deb.sh && ./script.deb.sh && apt-get install -y gitlab-ce
+RUN curl https://packages.gitlab.com/install/repositories/gitlab/gitlab-ee/script.deb.sh | bash
 
-RUN apt update && apt install -y tzdata && \
-  apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+#RUN EXTERNAL_URL="http://gitlab.example.com" apt-get install gitlab-ee
+RUN apt-get install gitlab-ee
+
+#RUN apt update && apt install -y tzdata && \
+#  apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 EXPOSE 443 80 22
 
-ENTRYPOINT (/opt/gitlab/embedded/bin/runsvdir-start &) && gitlab-ctl reconfigure && tail -f /dev/null
+RUN mkdir -p /etc/gitlab/ssl
+RUN chmod 700 /etc/gitlab/ssl
+RUN openssl req -new -x509 -days 365 -nodes -out gitlab.example.com.crt -keyout gitlab.example.com.key -subj "/C=FR/ST=Paris/L=Paris/O=42/OU/Docker_project/CN=gitlab"
+RUN cp gitlab.example.com.key gitlab.example.com.crt /etc/gitlab/ssl/
+
+#RUN gitlab-ctl reconfigure
+
+#ENTRYPOINT (/opt/gitlab/embedded/bin/runsvdir-start &) && gitlab-ctl reconfigure && tail -f /dev/null
